# automate-the-boring-stuff

./: .gitignore  LICENSE  README.md  pyproject.toml
chapter_10/: coin_toss.py
chapter_11/: 2048.py  emailer.py  image_site_downloader.py  link_verification.py
chapter_3/: collatz.py
chapter_4/: character_picture_grid.py  comma_code.py
chapter_5/: fantasy_game_inventory.py  test_fantasy_game_inventory.py
chapter_6/: table_printer.py
chapter_7/: strip.py  strong_password_detection.py  test_strip.py
chapter_8/: mad_libs.py  multiclipboard.py  regex_search.py
chapter_9/: deleting_unneeded_files.py  filling_gaps.py  selective_copy.py
